--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,7 +1,7 @@
-server.ssl:
-  key-store-type: PKCS12
-  key-store: classpath:keystore/certificate.p12
-  key-store-password: password
+#server.ssl:
+#  key-store-type: PKCS12
+#  key-store: classpath:keystore/certificate.p12
+#  key-store-password: password
 #  key-alias: localhost
 
 server.port: 8080
