--- a/finance-optimizer-service/src/main/resources/application.yml
+++ b/finance-optimizer-service/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
       import-check:
         enabled: false
   datasource:
-    url: jdbc:postgresql://${app.database}:5432/test_db
+    url: jdbc:postgresql://${app.database}:5432/finance
     username: postgres
     password: postgres
   jpa:
