--- a/day-plan-service/src/main/resources/application.yml
+++ b/day-plan-service/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
       import-check:
         enabled: false
   datasource:
-    url: jdbc:postgresql://${app.database}:5432/test_db
+    url: jdbc:postgresql://${app.database}:5432/day_plan
     username: postgres
     password: postgres
   jpa:
