--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,7 +111,6 @@ services:
     mem_limit: 512m
     environment:
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: test_db
     ports:
       - "5432:5432"
     healthcheck:
@@ -121,6 +120,7 @@ services:
       retries: 5
     volumes:
       - db:/var/lib/postgresql/data
+      - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
 volumes:
   db:
     driver: local
