--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
       import-check:
         enabled: false
   datasource:
-    url: jdbc:postgresql://${app.database}:5432/test_db
+    url: jdbc:postgresql://${app.database}:5432/users
     username: postgres
     password: postgres
   jpa:
