--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,6 +95,17 @@ services:
       rabbitmq:
         condition: service_healthy
 
+  notification:
+    build: notification-service
+    mem_limit: 512m
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    depends_on:
+      postgres:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+
   auth:
     build: backend-auth
     mem_limit: 512m
