--- a/trip-group-service/src/main/resources/application.yml
+++ b/trip-group-service/src/main/resources/application.yml
@@ -11,6 +11,11 @@ app.user-service: localhost
 app.availability-service: localhost
 
 spring:
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
   cloud:
     config:
       import-check:
