--- a/finance-optimizer-service/src/main/resources/application.yml
+++ b/finance-optimizer-service/src/main/resources/application.yml
@@ -7,6 +7,11 @@ app.group-service: localhost
 
 
 spring:
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
   cloud:
     config:
       import-check:
