--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -128,6 +128,17 @@ services:
       rabbitmq:
         condition: service_healthy
 
+  auth:
+    build: backend-auth
+    mem_limit: 512m
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    depends_on:
+      postgres:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+
   postgres:
     image: postgres
     mem_limit: 512m
