Weather service integration

--- a/day-plan-service/src/main/resources/application.yml
+++ b/day-plan-service/src/main/resources/application.yml
@@ -34,6 +34,7 @@ spring:
 spring.config.activate.on-profile: docker
 spring.config.import: "configserver:"
 app.trip-group-service: trip-group
+app.weather-proxy-service: weather-proxy
 app.config-server: config-server
 app.database: postgres
 
