--- a/attractions-proxy-service/pom.xml
+++ b/attractions-proxy-service/pom.xml
@@ -83,6 +83,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.maps</groupId>
+            <artifactId>google-maps-services</artifactId>
+            <version>2.1.0</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
