--- a/trip-group-service/src/main/resources/application.yml
+++ b/trip-group-service/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server.port: 8082
 spring.application.name: trip-group
 
 app.salt-length: 162
-app.invitation-prefix: "https://localhost:8080/api/v1/invitation?token="
+app.invitation-prefix: "http://localhost:3000/invite?token="
 app.config-server: localhost
 app.database: localhost
 app.accommodation-service: localhost
